--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@dimforge/rapier3d": "^0.15.1",
     "@react-three/drei": "^10.0.6",
     "@react-three/fiber": "^9.1.2",
     "@react-three/rapier": "^2.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-joystick-component": "^6.2.1",
     "three": "^0.175.0"
   },
   "devDependencies": {
