feat: Fix bullet behaviour
Moved Bullet functions and components to Bullet Manager,
Provided forwardRef for App component to call handleFire Event

pinned package.json "rapier" to 15.0.0 to avoid type errors
added "rapier-compat", removed "rapier"

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@dimforge/rapier3d": "^0.15.1",
+    "@dimforge/rapier3d-compat": "0.15.0",
     "@mui/material": "^7.0.2",
     "@react-three/drei": "^10.0.6",
     "@react-three/fiber": "^9.1.2",
@@ -37,5 +37,5 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
-  }
+  },
 }
