--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@react-three/drei": "^10.0.6",
     "@react-three/fiber": "^9.1.2",
     "@react-three/rapier": "^2.1.0",
+    "axios": "^1.8.4",
+    "peerjs": "^1.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-joystick-component": "^6.2.1",
